[gd_scene load_steps=9 format=3 uid="uid://cdrd3vmrlwcid"]

[ext_resource type="Texture2D" uid="uid://djjkx4o6cvdhj" path="res://Sprites/Player.png" id="1"]
[ext_resource type="Script" path="res://Scripts/Player.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://dyejh8hffpfva" path="res://Sprites/ExtraLives2.png" id="4"]
[ext_resource type="Texture2D" uid="uid://d2l45xp16anph" path="res://Sprites/ExtraLives3.png" id="5"]
[ext_resource type="Texture2D" uid="uid://c4t1fs3gqivpa" path="res://Sprites/ExtraLives1.png" id="6"]

[sub_resource type="SpriteFrames" id="1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(1.01927, 0.99606)

[sub_resource type="SpriteFrames" id="3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6")
}, {
"duration": 1.0,
"texture": ExtResource("4")
}, {
"duration": 1.0,
"texture": ExtResource("5")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Player" type="Area2D"]
position = Vector2(1, 2)
collision_mask = 12
script = ExtResource("2")
speed = 100

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.00591946, 2.00269)
shape = SubResource("2")

[node name="MuzzleLeft" type="Marker2D" parent="."]
position = Vector2(-5.00722, -9.45596)

[node name="MuzzleRight" type="Marker2D" parent="."]
position = Vector2(5.0127, -9.44855)

[node name="Lives" type="Node2D" parent="."]
position = Vector2(-0.102, 1.889)

[node name="Life1" type="AnimatedSprite2D" parent="Lives"]
position = Vector2(6.98948, 6.05439)
sprite_frames = SubResource("3")

[node name="Life2" type="AnimatedSprite2D" parent="Lives"]
position = Vector2(-0.283989, -9.65472)
sprite_frames = SubResource("3")

[node name="Life3" type="AnimatedSprite2D" parent="Lives"]
position = Vector2(-8.23734, 5.79729)
sprite_frames = SubResource("3")

[node name="FireCooldownTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="InvulTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
